@@ -257,9 +257,8 @@ public class StockholmStructure {
 			}
 			String[] seqDetails = splitSeqName(sequencename);
 			seq.setDescription(seqDetails[0]);
-			seq.setBioBegin((seqDetails[1] == null || seqDetails[1].trim().equals("") ? null : new Integer(
-					seqDetails[1])));
-			seq.setBioEnd((seqDetails[2] == null || seqDetails[2].trim().equals("") ? null : new Integer(seqDetails[2])));
+			seq.setBioBegin((seqDetails[1] == null || seqDetails[1].trim().isEmpty() ? null : Integer.valueOf(seqDetails[1])));
+			seq.setBioEnd((seqDetails[2] == null || seqDetails[2].trim().isEmpty() ? null : Integer.valueOf(seqDetails[2])));
 
 			seqs.add(seq);
 		}
@@ -322,9 +321,9 @@ public class StockholmStructure {
 			} else {
 				result.append(sequenceAsString);
 			}
-			result.append(" " + sequence.getDescription() + "\n");
+			result.append(" ").append(sequence.getDescription()).append("\n");
 		}
-		result.append("Alignment with " + bioSeqs.size() + " rows and " + sequenceLength + " columns");
+		result.append("Alignment with ").append(bioSeqs.size()).append(" rows and ").append(sequenceLength).append(" columns");
 
 		return result.toString();
 	}
